--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.DS_Storage
+
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
